fix: change theme variables location to html and custom overflow

--- a/src/components/wrapper/wrapper.component.scss
+++ b/src/components/wrapper/wrapper.component.scss
@@ -1,49 +1,8 @@
 .wrapper {
-
-    
-    &.dark-mode {
-
-        --h1-color: var(--bw-color-white-secondary);
-        --nav-item-color: var(--bw-color-gray-secondary);
-        --p-color: var(--bw-color-gray-secondary);
-        --v-pills-active: var(--bw-color-gray-senary);
-        --nav-bg-color: var(--bw-color-black-transparent);
-
-        --bg-color: var(--bw-bgcolor-dark-mode);
-
-        --accordion-bgcolor: var(--bw-bgcolor-dark-mode);
-        --icon-mode-toogle: var(--bw-color-gray-secondary);
-        --nav-border-color: var(--bw-color-gray-quinary);
-        --icon-mode-toogle-hover: var(--bw-color-white-secondary);
-        --nav-item-color-hover: var(--bw-color-white-secondary);
-
-
-
-        background-color: var(--bg-color);
-    }
-
-    &.light-mode {
-        --nav-item-color: var(--bw-color-gray-primary);
-        --h1-color: var(--bw-color-gray-primary);
-        --nav-bg-color: var(--bw-color-white-transparent);
-        --p-color: var(--bw-color-gray-secondary);
-        --v-pills-active: var(--bw-color-gray-tertiary);
-
-        --accordion-bgcolor: transparent;
-
-        --bg-color: var(--bw-bgcolor-light-mode);
-        --icon-mode-toogle: var(--bw-color-gray-primary);
-        --nav-border-color: var(--bw-color-gray-quaternary) --icon-mode-toogle-hover: var(--bw-color-gray-primary);
-
-        --nav-item-color-hover: var(--bw-color-black-primary);
-
-
-        background-color: var(--bg-color);
-
-    }
-    .wrapper-content{
-        .container{
-     
+    background-color: var(--bg-color);
+    .wrapper-content {
+        .container {
+          
         }
     }
 }
